# notion-python-client

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: lint.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  notion_python_client.handlers.rst  notion_python_client.models.properties.rst  notion_python_client.models.rst  notion_python_client.rst  quick-start.rst  requirements.txt
notion_python_client/: __init__.py  client.py  constants.py  core.py  exceptions.py  validation.py
notion_python_client/handlers/: __init__.py  database_handler.py  handler.py  page_handler.py
notion_python_client/models/: __init__.py  annotations.py  database_reference.py  date.py  emoji.py  file.py  link.py  mention.py  page.py  page_reference.py  parent.py  properties.py  rich_text.py  template_reference.py  text.py  user.py
notion_python_client/models/properties/: __init__.py  checkbox.py  created_by.py  created_time.py  date.py  email.py  files.py  formula.py  last_edited_by.py  last_edited_time.py  multi_select.py  number.py  people.py  phone_number.py  properties_base.py  properties_base_dict.py  relation.py  rich_text.py  rollup.py  select.py  status.py  title.py  unique_id.py  url.py
tests/: conftest.py  test_deserialization.py  test_handler.py  test_serialization.py
tests/test_data/: test_create_page.json  test_delete_page.json  test_page.json  test_properties.json  test_update_page.json
