[build-system]
requires = ["setuptools>=61.0", "cerberus>=1.3.5"]
build-backend = "setuptools.build_meta"

[project]
name = "notion_python_client"
version = "0.0.1a1"
authors = [
  { name="Marten Jostmann", email="marten.jostmann@gmail.com" },
]
description = "This package is a Python client for the Notion API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/martenjostmann/notion-python-client"